@@ -13,6 +13,14 @@
 Print the command line options.
 
 .TP
+\fB\-c\fR
+Print control output changes to stdout.
+
+.TP
+\fB\-c SYM=VAL\fR
+Set control value (e.g. "vol=1.4").
+
+.TP
 \fB\-u UUID\fR, \fB\-\-uuid UUID\fR
 UUID for Jack session restoration.
 
@@ -23,6 +31,10 @@ Load state from state directory.
 .TP
 \fB\-d\fR, \fB\-\-dump\fR
 Dump plugin <=> UI communication.
+
+.TP
+\fB\-b SIZE\fR
+Buffer size for plugin <=> UI communication.
 
 .SH SEE ALSO
 .BR jalv.gtk(1),
