@@ -85,16 +85,17 @@ typedef struct {
 } ControlChange;
 
 typedef struct {
-	char*    uuid;         ///< Session UUID
-	char*    load;         ///< Path for state to load
-	char**   controls;     ///< Control values
-	uint32_t buffer_size;  ///< Plugin<=>UI communication buffer size
-	double   update_rate;  ///< UI update rate in Hz
-	int      dump;         ///< Dump communication iff true
-	int      generic_ui;   ///< Use generic UI iff true
-	int      show_hidden;  ///< Show controls for notOnGUI ports
-	int      no_menu;      ///< Hide menu iff true
-	int      show_ui;      ///< Show non-embedded UI
+	char*    uuid;              ///< Session UUID
+	char*    load;              ///< Path for state to load
+	char**   controls;          ///< Control values
+	uint32_t buffer_size;       ///< Plugin <= >UI communication buffer size
+	double   update_rate;       ///< UI update rate in Hz
+	int      dump;              ///< Dump communication iff true
+	int      generic_ui;        ///< Use generic UI iff true
+	int      show_hidden;       ///< Show controls for notOnGUI ports
+	int      no_menu;           ///< Hide menu iff true
+	int      show_ui;           ///< Show non-embedded UI
+	int      print_controls;    ///< Print control changes to stdout
 } JalvOptions;
 
 typedef struct {
